--- a/OS_Laba_1/OS_Laba_1.vcxproj
+++ b/OS_Laba_1/OS_Laba_1.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="OS_Laba_1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="build.cmd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
